Add helm and kubernetes build image
Change-Id: I852052abd33bbcdfb0a3b5a95fbc6f02d86113e6
Issue-ID: CIMAN-155
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/ci-management/ci-management-packer-jobs.yaml
+++ b/jjb/ci-management/ci-management-packer-jobs.yaml
@@ -69,3 +69,21 @@
       - centos-7
       - ubuntu-16.04
     templates: redis
+
+- project:
+    name: packer-helm-jobs
+    jobs:
+      - gerrit-packer-merge
+
+    project: ci-management
+    project-name: ci-management
+    branch: master
+    archive-artifacts: '**/*.log'
+
+    build-node: centos7-builder-2c-1g
+
+    platforms:
+      - centos-7
+      - ubuntu-16.04
+    templates: helm
+
