Upsize build minion for sdc-sdc-dcae-d-fe
Issue-ID: CIMAN-160
Change-Id: I3f818a8f6027303d124bb8016cb5cd4574c7c7fb
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/sdc/sdc-dcae-d-fe.yaml
+++ b/jjb/sdc/sdc-dcae-d-fe.yaml
@@ -2,6 +2,7 @@
 - project:
     name: sdc-dcae-d-fe
     project-name: 'sdc-dcae-d-fe'
+    build-node: ubuntu1604-builder-4c-2g
     jobs:
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
