--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -6,7 +6,8 @@
       - gerrit-maven-clm:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily':
+          pom: 'sparkybe-onap-application/pom.xml'
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'sparkybe-onap-application/pom.xml'
           mvn-goals: 'docker:build'
