Use repo 10003 instead of 10004
Change-Id: I505023a7cdab90fa8ecfeb540f6306f0e19c3d6d
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>
Issue-ID: VFC-728

--- a/jjb/global-templates-docker.yaml
+++ b/jjb/global-templates-docker.yaml
@@ -112,6 +112,7 @@
             DOCKER_NAME={docker_name}
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
+            BUILD_MODE=SNAPSHOT
             DOCKERREGISTRY={docker_registry}
       # Do the docker build
       - shell: !include-raw: ../shell/docker-build.sh
@@ -151,6 +152,7 @@
             DOCKER_NAME={docker_name}
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
+            BUILD_MODE=SNAPSHOT
             DOCKERREGISTRY={docker_registry}
       # Do the docker build
       - shell: !include-raw: ../shell/docker-build.sh
@@ -171,7 +173,7 @@
     #     branch:    git branch (eg. stable/lithium or master)
     <<: *docker_job_boiler_plate
 
-    docker_registry: '$DOCKER_REGISTRY:10004'
+    docker_registry: '$DOCKER_REGISTRY:10003'
 
     scm:
       - lf-infra-gerrit-scm:
@@ -196,6 +198,7 @@
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
             DOCKERREGISTRY={docker_registry}
+            BUILD_MODE=STAGING
 
       # Do the docker build
       - shell: !include-raw: ../shell/snapshot-strip.sh
@@ -241,6 +244,7 @@
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
             DOCKERREGISTRY={docker_registry}
+            BUILD_MODE=SNAPSHOT
       # Do the docker build
       - shell: !include-raw: ../shell/docker-build.sh
       - inject:
@@ -280,6 +284,7 @@
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
             DOCKERREGISTRY={docker_registry}
+            BUILD_MODE=SNAPSHOT
       # Do the docker build
       - shell: !include-raw: ../shell/docker-build.sh
       - inject:
@@ -299,7 +304,7 @@
     #     branch:    git branch (eg. stable/lithium or master)
     <<: *docker_job_boiler_plate
 
-    docker_registry: '$DOCKER_REGISTRY:10004'
+    docker_registry: '$DOCKER_REGISTRY:10003'
 
     scm:
       - lf-infra-gerrit-scm:
@@ -324,6 +329,7 @@
             DOCKER_ROOT={docker_root}
             DOCKER_TAG={docker_tag}
             DOCKERREGISTRY={docker_registry}
+            BUILD_MODE=STAGING
 
       # Do the docker build
       - shell: !include-raw: ../shell/snapshot-strip.sh
