Only trigger build nokiav2 directory
Change-Id: I850f3154141e16bf1d5d1656c69d71b75d6d7002
Issue-ID: VFC-728
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>

--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
@@ -17,7 +17,7 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-    files: '**'
+    files: 'nokiav2/**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
@@ -42,8 +42,8 @@
           docker_build_args: '--build-arg MODE= --build-arg REPO=staging'
           docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
           docker_root: '$WORKSPACE/nokiav2/deployment'
-          docker_registry: 10003
-    files: '**'
+          docker_registry: '$DOCKER_REGISTRY:10003'
+    files: 'nokiav2/**'
     archive-artifacts: ''
     build-node: ubuntu1604-docker-8c-8g
 
