--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -7,6 +7,10 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-DskipTests=true'
     project: 'sdc/dcae-d/dt-be-main'
     stream:
       - 'master':
