Add files pattern to release trigger
Change-Id: I05612b4de782c6c3643611c61c6a4367a6023217
Issue-ID: VFC-728
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>

--- a/jjb/global-macros.yaml
+++ b/jjb/global-macros.yaml
@@ -414,7 +414,7 @@
                   branch-pattern: '**/{branch}'
               file-paths:
                 - compare-type: 'ANT'
-                  pattern: '**'
+                  pattern: '{files}'
 
 - trigger:
     name: trigger-on-build-success
