Fix integration docker verify jobs
Fix issue with integration docker verify job not
picking up the right gerrit change for verification.

Change-Id: I46348f2bd3a9564929b233945b93ccbdb28be9d7
Issue-ID: INT-458
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration-templates-docker.yaml
+++ b/jjb/integration/integration-templates-docker.yaml
@@ -86,8 +86,8 @@
 
     scm:
       - gerrit-trigger-scm:
-          refspec: ''
-          choosing-strategy: 'default'
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
           submodule-recursive: '{submodule-recursive}'
 
     wrappers:
