--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -11,7 +11,8 @@
           build-node: ubuntu1604-builder-8c-8g
       - '{project-name}-{stream}-merge-java':
           build-node: ubuntu1604-builder-8c-8g
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily':
+          build-node: ubuntu1604-builder-8c-8g
 
     project: 'appc'
     stream:
