--- a/jjb/appc/appc-cdt.yaml
+++ b/jjb/appc/appc-cdt.yaml
@@ -6,6 +6,7 @@
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
 
     project: 'appc/cdt'
     stream:
