Add python release to jjb jobs
Issue-ID: VNFSDK-269

Change-Id: I32e1fba14f3ab5300ba9aa698ecc5086a789279a
Signed-off-by: Chris Donley <christopher.donley@huawei.com>

--- a/jjb/vnfsdk/vnfsdk-ice-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-ice-python.yaml
@@ -28,6 +28,7 @@
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{subproject}-python-staging-{stream}'
+      - '{project-name}-{subproject}-python-release-{stream}'
 - project:
     name: vnfsdk-ice-docker
     project-name: 'vnfsdk-ice-docker'
