--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -21,6 +21,7 @@
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{subproject}-python-staging-{stream}'
+      - '{project-name}-{subproject}-python-release-{stream}'
       - '{project-name}-{stream}-docker-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
