--- a/jjb/vnfsdk/vnfsdk-pkgtools-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-pkgtools-python.yaml
@@ -19,6 +19,7 @@
       - gerrit-python-xc-clm
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{subproject}-python-staging-{stream}'
+      - '{project-name}-{subproject}-python-release-{stream}'
 - project:
     name: vnfsdk-pkgtools-tox-sonar
     jobs:
