Add doc jobs for VVP
Add documentation verify and merge jobs
for vvp-documentation.

Change-Id: I6bd5aee86ba2f5f85fbc092242503d80e8bb3c74
Issue-ID: CIMAN-133
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vvp/vvp-documentation.yaml
+++ b/jjb/vvp/vvp-documentation.yaml
@@ -3,6 +3,7 @@
     name: vvp-documentation
     project-name: 'vvp-documentation'
     project: 'vvp/documentation'
+    rtdproject: 'onap'
     stream:
       - 'master':
           branch: 'master'
@@ -10,3 +11,5 @@
     build-node: ubuntu1604-builder-4c-4g
     jobs:
       - gerrit-python-xc-clm
+      - '{project-name}-{stream}-verify-rtd'
+      - '{project-name}-{stream}-merge-rtd'
