Use tox verify job for VVP
Use tox verify job rather than docs job
since this template is more applicable.

Change-Id: I928c9a3972ea13daec3cc6e06a0479da769c5479
Issue-ID: CIMAN-133
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vvp/vvp-documentation.yaml
+++ b/jjb/vvp/vvp-documentation.yaml
@@ -11,5 +11,4 @@
     build-node: ubuntu1604-builder-4c-4g
     jobs:
       - gerrit-python-xc-clm
-      - '{project-name}-{stream}-verify-rtd'
-      - '{project-name}-{stream}-merge-rtd'
+      - '{project-name}-tox-verify-{stream}'
