--- a/jjb/multicloud/multicloud-openstack-ocata-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-ocata-csit.yaml
@@ -10,5 +10,8 @@
       - 'functionality1':
           trigger_jobs:
             - 'multicloud-openstack-master-docker-java-version-shell-daily'
+      - 'hpa-discovery':
+          trigger_jobs:
+            - 'multicloud-openstack-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
