Update jjb jobs for Gizmo and Champ
Remove release java daily and add release version java daily

Change-Id: Ie6bd31d6dcedb633780a2e9c02ac4de1d0d3dafe
Issue-ID: AAI-1151
Signed-off-by: Ravi Geda <GRaviK@amdocs.com>

--- a/jjb/aai/aai-gizmo.yaml
+++ b/jjb/aai/aai-gizmo.yaml
@@ -6,7 +6,7 @@
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
           mvn-goals: 'docker:build'
