Add appc jobs for Beijing branch
Change-Id: I03da80d90e758a3ef0c7bb495363024036c203b2
Signed-off-by: Patrick Brady <pb071s@att.com>
Issue-ID: APPC-916

--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -6,8 +6,8 @@
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'appc'
     stream:
-      - 'master':
-          branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     functionality:
       - 'healthcheck':
           trigger_jobs:
