--- a/jjb/appc/appc-cdt.yaml
+++ b/jjb/appc/appc-cdt.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'appc-cdt-settings'
     files: '**'
     archive-artifacts: ''
