Add sms client jar upload daily
Add a build to upload jar file to nexus
Using the release java-daily should upload
to nexus.

Issue-ID: AAF-92
Change-Id: I68752ee5a722a4ce9fda3b223956f89afeea05a4
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/jjb/aaf/aaf-sms.yaml
+++ b/jjb/aaf/aaf-sms.yaml
@@ -2,11 +2,15 @@
 - project:
     name: aaf-sms
     project-name: 'aaf-sms'
+    subproject: 'aaf-sms-client'
     path: 'sms-service/src'
     jobs:
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
+      - '{project-name}-{stream}-{subproject}-release-java-daily':
+          pom:
+            'sms-client/java/pom.xml'
       - '{project-name}-{stream}-docker-golang-shell-daily':
           script:
             !include-raw-escape: 'build-sms-docker-image.sh'
