--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -26,6 +26,8 @@
           branch: 'release-2.2.0'
       - 'release-2.3.0':
           branch: 'release-2.3.0'
+      - 'release-2.4.0':
+          branch: 'release-2.4.0'
     mvn-settings: 'portal-sdk-settings'
     files: '**'
     archive-artifacts: ''
