Add integration jobs for beijing branch
Change-Id: Ia5445a581eaabd16ee47a10904e227915fddb7ca
Issue-ID: INT-506
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration-docker.yaml
+++ b/jjb/integration/integration-docker.yaml
@@ -9,6 +9,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     subproject:
       - 'sniroemulator':
           pom: 'test/mocks/sniroemulator/pom.xml'
