--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -15,6 +15,9 @@
     stream:
       - 'master':
           branch: 'master'
+    stream:
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'integration-settings'
     files: '**'
     archive-artifacts: ''
