--- a/jjb/integration/integration-csit.yaml
+++ b/jjb/integration/integration-csit.yaml
@@ -8,6 +8,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     functionality:
       - 'functionality1':
           trigger_jobs:
