--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -6,6 +6,8 @@
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'appc'
     stream:
+      - 'master':
+          branch: master
       - 'beijing':
           branch: 'beijing'
     functionality:
