Update aai jjb jobs for beijing branch
Issue-ID: AAI-1170
Change-Id: I7ee064e2187fe1434af848e9e5cba92c6c876cb3
Signed-off-by: Jimmy Forsyth <jf2512@att.com>

--- a/jjb/aai/aai-rest-client.yaml
+++ b/jjb/aai/aai-rest-client.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'aai-rest-client-settings'
     files: '**'
     archive-artifacts: ''
