--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -8,6 +8,8 @@
     stream:
       - 'master':
           branch: master
+      - 'beijing':
+          branch: beijing
     functionality:
       - 'resources':
           trigger_jobs:
