--- a/jjb/aai/aai-router-core-service.yaml
+++ b/jjb/aai/aai-router-core-service.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'aai-router-core-settings'
     files: '**'
     archive-artifacts: ''
