Increase doc-master-verify-rtd submodule-timeout
Specified 12 minutes timeout for submodule update init
Verified in the Jenkins Sandbox

Change-Id: Id23099f348298839bc58177a8cab7d154693181e
Issue-ID: CIMAN-163
Signed-off-by: Rich Bennett <rb2745@att.com>

--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -42,6 +42,7 @@
           wipe-workspace: true
           submodule:
             recursive: '{submodule-recursive}'
+            timeout: '12'
 
     wrappers:
       - infra-wrappers:
