Enable debug on clamp
Enable debug on maven docker build for clamp to investigate the issue

Issue-ID: CLAMP-150
Change-Id: I2dfad12aac7d7eeaa0e41d0203aa6fdee49bd0b8
Signed-off-by: Determe, Sebastien (sd378r) <sd378r@intl.att.com>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -23,7 +23,7 @@
          setVersion: 'DoSetVersion'
          docker-pom: 'pom.xml'
          mvn-profile: 'docker'
-         mvn-params: '-Dmaven.test.skip=true'
+         mvn-params: '-X -Dmaven.test.skip=true'
          maven-properties: |
           skip.docker.build=false
           skip.docker.tag=false
