--- a/jjb/sdc/sdc-sdc-workflow-designer.yaml
+++ b/jjb/sdc/sdc-sdc-workflow-designer.yaml
@@ -13,6 +13,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'sdc-sdc-workflow-designer-settings'
     files: '**'
     archive-artifacts: ''
