--- a/jjb/sdc/sdc-jtosca.yaml
+++ b/jjb/sdc/sdc-jtosca.yaml
@@ -12,10 +12,24 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'sdc-jtosca-settings'
     files: '**'
     archive-artifacts: ''
     build-timeout: 60
+- project:
+    name: sdc-jtosca-sonar
+    jobs:
+      - gerrit-maven-sonar
+    cron: 'H 11 * * *'
+    build-node: ubuntu1604-builder-4c-4g
+    project: 'sdc/jtosca'
+    project-name: 'sdc-jtosca'
+    branch: 'master'
+    mvn-settings: 'sdc-jtosca-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
 - project:
     name: sdc-jtosca-sonar
     jobs:
