Prepare for Beijing branch of doc project
Add branch to doc project
Move html build tree to jenkins archive on  verify jobs

Change-Id: I3bc2a6de908fc00ce6d9b91fee6de5067997ef98
Issue-ID: DOC-270
Signed-off-by: Rich Bennett <rb2745@att.com>

--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -42,6 +42,7 @@
           wipe-workspace: true
           submodule:
             recursive: '{submodule-recursive}'
+            timeout: '12'
 
     wrappers:
       - infra-wrappers:
@@ -76,6 +77,8 @@
           pip freeze
           cd $WORKSPACE/{path}
           tox
+          mkdir -p "$WORKSPACE/archives"
+          mv  docs/_build/html "$WORKSPACE/archives/"
 
     publishers:
       - infra-shiplogs:
