Add required job and removed unnecessary jobs
Add back the following job as it was used to release the versioned
docker image
{project-name}-{stream}-docker-version-java-daily
Remove the following jons as they dont release any image or dont do any
useful work
{project-name}-{stream}-verify-java
{project-name}-{stream}-merge-java
{project-name}-{stream}-release-version-java-daily

Issue-ID: DMAAP-509
Change-Id: Ie3620bc3543d2b625c2ee0aca8bedcb501fc9005
Signed-off-by: sunil unnava <su622b@att.com>

--- a/jjb/dmaap/dmaap-messagerouter-docker.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-docker.yaml
@@ -5,9 +5,8 @@
     project-name: 'dmaap-messagerouter-docker'
     jobs:
       - gerrit-maven-clm:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
       - '{project-name}-{stream}-docker-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     project: 'dmaap/messagerouter/messageservice'
