Create policy beijing jobs
Creating beijing jobs and disable all release jobs.

Issue-ID: POLICY-875
Change-Id: I0cf6914a381bc68181c357aeabf627c89af9c94d
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -6,12 +6,15 @@
       - gerrit-maven-clm:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily':
+          disabled: true
 
     project: 'policy/common'
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'policy-common-settings'
     files: '**'
     archive-artifacts: ''
