Create policy beijing jobs
Creating beijing jobs and disable all release jobs.

Issue-ID: POLICY-875
Change-Id: I0cf6914a381bc68181c357aeabf627c89af9c94d
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-drools-applications.yaml
+++ b/jjb/policy/policy-drools-applications.yaml
@@ -7,11 +7,14 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
+          disabled: true
 
     project: 'policy/drools-applications'
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'policy-drools-applications-settings'
     files: '**'
     archive-artifacts: ''
