Add Beijing release jobs for ccsdk/sdnc
Add Beijing branch Jenkins jobs for CCSDK and SDNC repos containing
release notes (ccsdk/distribution and sdnc/oam, respectively)

Change-Id: I736788d371a40469d104d2116f6b857ae1768643
Issue-ID: CIMAN-165
Signed-off-by: Timoney, Dan (dt5972) <dt5972@att.com>

--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'ccsdk-distribution-settings'
     files: '**'
     archive-artifacts: ''
