--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'sdnc-oam-settings'
     files: '**'
     archive-artifacts: ''
