Update Music jenkins build
Build both war,jar in master,beijing and release 2.5.5

Change-Id: I2352a0ab0fe31a661a7550011d1e07e8bc0674d2
Issue-ID: MUSIC-78, MUSIC-79
Signed-off-by: Nelson,Thomas(tn1381)(arthurdent3) <tn1381@att.com>

--- a/jjb/music/music-jar.yaml
+++ b/jjb/music/music-jar.yaml
@@ -13,7 +13,11 @@
       - '{project-name}-{stream}-{subproject}-merge-java'
     project: 'music'
     stream:
-      - 'jar-release-2.5.3':
+      - 'jar-master':
+          branch: 'master'
+      - 'jar-beijing':
+          branch: 'beijing'
+      - 'jar-release-2.5.5':
           branch: 'release-2.5.3'
     mvn-settings: 'music-settings'
     files: '**'
