Use release version java daily
Use release version daily instead of the
release without any version daily

Issue-ID: AAF-330
Change-Id: I246f668a48fbf6940a44ff108cb79f7ab9645e19
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/jjb/aaf/aaf-sms.yaml
+++ b/jjb/aaf/aaf-sms.yaml
@@ -8,7 +8,7 @@
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
-      - '{project-name}-{stream}-{subproject}-release-java-daily':
+      - '{project-name}-{stream}-{subproject}-release-version-java-daily':
           pom:
             'sms-client/java/pom.xml'
       - '{project-name}-{stream}-docker-golang-shell-daily':
