Add job to build release
Change-Id: I943494d6826aa8f4e9186faa8c82377aa8c5b09f
Issue-ID: VFC-728
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>

--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
@@ -43,6 +43,11 @@
           docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
           docker_root: '$WORKSPACE/nokiav2/deployment'
           docker_registry: '$DOCKER_REGISTRY:10003'
+      - '{project-name}-{subproject}-{stream}-real-release-version-docker-no-sonar':
+          docker_build_args: '--build-arg MODE= --build-arg REPO=releases'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          docker_registry: '$DOCKER_REGISTRY:10003'
     files: 'nokiav2/**'
     archive-artifacts: ''
     build-node: ubuntu1604-docker-8c-8g
