--- a/jjb/lab/lab.yaml
+++ b/jjb/lab/lab.yaml
@@ -12,5 +12,11 @@
           job-desc: "Heat-based deployment into AT&T TLAB Integration-HEAT-Test tenant"
       - "tlab-beijing-oom-deploy":
           job-desc: "OOM-based deployment into AT&T TLAB Integration-OOM-Test tenant"
-      - "aws-beijing-oom-deploy":
-          job-desc: "OOM-based deployment into AWS"
+      - "windriver-casablanca-heat-deploy":
+          job-desc: "Heat-based deployment into Wind River lab Integration-Stable tenant"
+      - "windriver-casablanca-oom-deploy":
+          job-desc: "OOM-based deployment into Wind River lab Integration-Jenkins tenant"
+      - "tlab-casablanca-heat-deploy":
+          job-desc: "Heat-based deployment into AT&T TLAB Integration-HEAT-Test tenant"
+      - "tlab-casablanca-oom-deploy":
+          job-desc: "OOM-based deployment into AT&T TLAB Integration-OOM-Test tenant"
