Add job for beijing branch
Created Jenkins jobs pointing to the Beijing branch.

Change-Id: I3c9f95caf9ad550b030ea5461d80b1bb1adc5ee3
Issue-ID: OPTFRA-258
Signed-off-by: Dileep Ranganathan <dileep.ranganathan@intel.com>

--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -6,8 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'release-1.1.1':
-          branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
     mvn-settings: 'optf-has-settings'
     subproject:
       - 'conductor':
