--- a/jjb/optf/optf-has-csit.yaml
+++ b/jjb/optf/optf-has-csit.yaml
@@ -5,7 +5,11 @@
        - '{project-name}-{stream}-verify-csit-{functionality}'
        - '{project-name}-{stream}-csit-{functionality}'
      project-name: 'optf-has'
-     stream: 'master'
+     stream:
+       - 'master':
+           branch: master
+       - 'beijing':
+           branch: beijing
      functionality:
        - 'has':
            trigger_jobs:
