Add intagration jobs
Add integration jobs for prh_testsuites.

Change-Id: I483a0a46c96b2534cc3fdfa2a91d5ef50e8d1a17
Issue-ID: DCAEGEN2-206
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -12,4 +12,8 @@
           trigger_jobs:
             - 'dcaegen2-master-merge-java'
             - 'dcaegen2-collectors-ves-master-merge-java'
+      - 'prh_testsuites':
+          trigger_jobs:
+            - 'dcaegen2-master-merge-java'
+            - 'dcaegen2-services-prh-master-merge-java'
     robot-options: ''
