Fix cascade build references for docker.
The parent jobs that trigger the docker build may reside in
different jenkins job structure. Adding a parameter to configure
the parent job that should trigger the build.

Change-Id: I796976c97abc77feea1c9625c11023802ef2f54d
Issue-ID: VFC-728
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>

--- a/jjb/global-templates-docker.yaml
+++ b/jjb/global-templates-docker.yaml
@@ -166,7 +166,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-merge-java'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -251,7 +251,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-verify-java'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -364,7 +364,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-release-version-java-daily'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -442,7 +442,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-merge-java'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -523,7 +523,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-verify-java'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -636,7 +636,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-release-version-java-daily'
+            - '{parent_job}'
           result: 'success'
 
 - job-template:
@@ -740,7 +740,7 @@
     triggers:
       - reverse:
           jobs:
-            - '{project-name}-{stream}-{subproject}-release-version-java-daily'
+            - '{parent_job}'
           result: 'success'
 
 
