--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
@@ -34,7 +34,11 @@
           pom: 'nokiav2/pom.xml'
           pattern: 'nokiav2/**'
     jobs:
-#missing docker build for verify
+      - '{project-name}-{subproject}-{stream}-verify-docker-cascade-trigger':
+          docker_build_args: '--build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          parent_job: '{project-name}-{stream}-drv-vnfm-nokiav2-verify-java'
       - '{project-name}-{subproject}-{stream}-merge-docker-cascade-trigger':
           docker_build_args: '--build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
           docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
