--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
@@ -35,7 +35,7 @@
           pattern: 'nokiav2/**'
     jobs:
       - '{project-name}-{subproject}-{stream}-verify-docker-cascade-trigger':
-          docker_build_args: '--build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
+          docker_build_args: '--file Dockerfile.verify --build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
           docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
           docker_root: '$WORKSPACE/nokiav2/deployment'
           parent_job: '{project-name}-{stream}-drv-vnfm-nokiav2-verify-java'
