Add pattern share for pike subproject
Change-Id: Ia2ddd270bc49503d06a1ab0180c4306cb90b9221
Issue-ID: MULTICLOUD-276
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -24,6 +24,14 @@
           path: 'ocata'
           pattern: 'share/**'
           pom: 'ocata/pom.xml'
+      - 'pike':
+          path: 'pike'
+          pattern: 'pike/**'
+          pom: 'pike/pom.xml'
+      - 'pike_share':
+          path: 'pike'
+          pattern: 'share/**'
+          pom: 'pike/pom.xml'
       - 'windriver':
           path: 'windriver'
           pattern: 'windriver/**'
