Add pike subproject
Change-Id: I37661626fb7c2a7e4051197af92c474ee549256f
Issue-ID: MULTICLOUD-276
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -89,4 +89,16 @@
     mvn-settings: 'multicloud-openstack-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
-
+- project:
+    name: multicloud-openstack-pike-sonar
+    jobs:
+      - gerrit-maven-sonar
+    cron: 'H 11 * * *'
+    build-node: ubuntu1604-builder-4c-4g
+    project: 'multicloud/openstack'
+    project-name: 'multicloud-openstack-pike'
+    branch: 'master'
+    mvn-params: '-f pike/pom.xml'
+    mvn-settings: 'multicloud-openstack-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
